<resources>
    <string name="app_name">Tour Guide</string>
    <string name="title_activity_tabbed">TabbedActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_txt">WELCOME TO BLIDA2</string>
    <string name="login_page_txt">plenty of amazing places and experiences await you, login or enter as guest to start exploring :</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="login">login</string>
    <string name="enter_as_guest">enter as guest</string>
    <string name="forgot_password">forgot password?</string>
    <string name="register">register</string>
    <string name="note">note: registrations are not available yet, you can only enter as guest.</string>
    <string name="rate_place">Rate Place</string>
    <string name="about_place">About Place</string>
    <string name="learn_more">learn more</string>
    <string name="places">places</string>
    <string name="toast_note">feature not implemented yet</string>
    <string name="hisorical_name1">Sidi Kebir</string>
    <string name="historical_type1">in mountain</string>
    <string name="historical_visit_time1">Anytime</string>
    <string name="historical_location1">Sidi Kebir, Blida</string>
    <string name="historical_des1">Sid Ahmed el Kebir was a pious and knowledgeable Muslim man.  In 1519, he travelled and settled at the convergence of the \"Oued Taberkachent and \"Chaabet ar-Romman\" ‘Ravin des Grenades’, which is known as “Oued (River) Sidi el Kebir”, 2km from Blida’s city centre.A zaouia (mausoleum) was set around this pious man.  It is in the Beni Saleh tribe area where Sid Ahmed el Kebir first stayed.</string>
    <string name="historical_name2">Ibn Saadoun mosque</string>
    <string name="historical_type2">mosque</string>
    <string name="historical_visit_time2">anytime</string>
    <string name="historical_location2">FRCH+HH6? Blida</string>
    <string name="historical_des2">the IBN-SAADOUNE mosque in Blida is a fascinating story in its construction.An old couple decides to build their house, at the request of the rich wife, the project of a house has matured in the head of this wife for her old days and those of her husband. It is like this that she entrusts her husband with her possessions to realize the house of her dreams. A husband in the service of God begins the construction of the house of God (mosque) instead of the one that his wife asks of him and for which (house) she commits all her jewelry. After several years they are getting old and the old woman asks her to become her project.</string>
    <string name="historical_name3">Douirette</string>
    <string name="historical_type3">Town</string>
    <string name="historical_visiting_time3">Anytime</string>
    <string name="historical_location3">Douirette, Blida</string>
    <string name="historical_des3">BLIDA - The old \"Douirette\" district in the city center of Blida was the subject of a study carried out by the public authorities with a view to the restoration of this historic site dating back to the 16th century with the objective of restoring this heritage place its original stamp and make it benefit from legal protection.</string>
    <string name="historical_name4">\"Patrice Lumumba garden \"</string>
    <string name="historical_type4">Garden</string>
    <string name="historical_visiting_time4">08:00Am to 10:00Pm</string>
    <string name="historical_des4">Officially this garden bears the name of \"Jardin Patrice Lumumba\", it is located opposite the Lycée Ibn Rochd (the former military hospital of Blida) this garden constitutes a real lung for the city center. The Bizot garden was created in 1867 by the Municipality on military land that did not belong to the city.\n Originally created to be a botanical garden, it is transformed into a public garden, with a marble fountain and a large basin at the entrance, where you can see ducks.</string>
    <string name="historical_location4">FR9G+4MH, Blida</string>
    <string name="hotels_name1">BN Hotel</string>
    <string name="hotels_type1">Unassuming hotel with a restaurant(3 stars)</string>
    <string name="hotels_visiting_time1">7/7_24/24</string>
    <string name="hotels_location1">03 Cité Meliani, Oulad Yaich 09015</string>
    <string name="hotels_des1">BN Hotel is more than a three-star hotel, specially designed to offer you peace of mind and peace of mind.</string>
    <string name="hotels_name2">Clean Hotel</string>
    <string name="hotels_type2">Relaxed quarters, plus scenic dining(3 stars)</string>
    <string name="hotels_visiting_time2">7/7_24/24</string>
    <string name="hotels_location2">Rue Aissa El-Bey Khaled, Blida 09000</string>
    <string name="hotels_des2">Clean Hotel is a 3-star property located in Blida. All rooms feature a flat-screen TV with satellite channels and a private bathroom. The accommodations provides a 24-hour front desk and free WiFi is available throughout the property.\n \nAt the hotel, all rooms include a desk. Guest rooms will provide guests with a fridge. They include a private bathroom fitted with shower.\n\nA continental breakfast is served every morning at the property.</string>
    <string name="hotels_name3">KT Hotel</string>
    <string name="hotels_type3"><![CDATA[Relaxed hotel with city views & dining(4 stars)]]></string>
    <string name="hotels_visiting_time3">7/7_24/24</string>
    <string name="hotels_location3">GVF8+4JR,Ouled Yaich</string>
    <string name="hotels_des3">Located at the entrance of Blida, the kthotels is 2 minutes from the east-west highway and 30 minutes from the Houari Noumediene Airport. The kthotels has all the facilities needed to accommodate business guests, conventioneers and family. Our 48 rooms are comfortable, soundproofed and thoroughly equipped for a quality stay. On arrival, a free private parking for 80 cars is at your disposal.</string>
    <string name="hotels_name4">Ville des roses Hotel</string>
    <string name="hotels_type4">Casual hotel with a pool (4 stars)</string>
    <string name="hotels_visiting_time4">7/7_24/24</string>
    <string name="hotels_location4">Boulevard Mohamed Boudiaf, Blida 09000</string>
    <string name="hotels_des4">Finding an ideal hotel in Blida does not have to be difficult. Welcome to Hotel Ville Des Roses, a nice option for travelers like you.\n\nThe rooms offer a minibar and air conditioning, and getting online is possible, as free wifi is available, allowing you to rest and refresh with ease.\n\nHotel Ville Des Roses features a concierge and room service. In addition, as a valued Hotel Ville Des Roses guest, you can enjoy a pool and breakfast that are available on-site. Guests arriving by vehicle have access to free parking.</string>
    <string name="places_name1">Place de toute</string>
    <string name="places_type1">city center</string>
    <string name="places_visiting_time1">from 8:00Am up to 12:00Pm</string>
    <string name="places_location1">Blida, Place 1er Novembre</string>
    <string name="places_des1">The place of 1st november or as known \"place Ettout\" is one of Blida\'s famous landmarks. It is located in the city center. The creation of this place goes back to the 16th century where the roses festival used to take place.</string>
    <string name="place_name2">Hamam Melouane</string>
    <string name="places_type2">Town</string>
    <string name="places_visiting_time2">anytime(preferably in the evening)</string>
    <string name="places_location2">Blida, Hammam Melouane</string>
    <string name="places_des2">Hammam Melouane is a town and commune in Blida Province, Algeria. According to the 1998 census it has a population of 4,551.</string>
    <string name="places_name3">Chrea</string>
    <string name="places_type3">Mountain</string>
    <string name="places_visiting_time3">Anytime</string>
    <string name="places_location3">Blida, Chréa</string>
    <string name="places_des3">Chrea is a town in Algeria, located in Blida Province, Ouled Yaïch District, in a mountainous area named Tell Atlas, near Blida. It had a population of 783 in 2008.[1]\n\nIn its municipality is situated the Chréa National Park, one of the largest national parks of the country, and a ski resort.[2]\n\nWithin the national park is one of the few relict populations of the endangered primate, the Barbary macaque, Macaca sylvanus; this species of primate originally had a much wider range in Northern Algeria and Morocco.[3]</string>
    <string name="places_name4">Cheffa</string>
    <string name="places_type4">River</string>
    <string name="places_visiting_time4">Anytime(preferably in the evening)</string>
    <string name="places_location4">Blida, Chiffa</string>
    <string name="places_des4">In this place you can see and interact with The Barbary macaque (Macaca sylvanus), also known as Barbary ape or magot, which is a species of macaque unique for its distribution outside Asia. Found in the Atlas Mountains of Algeria and Morocco along with a small population of uncertain origin in Gibraltar, the Barbary macaque is one of the best-known Old World monkey species.\nIt’s highly recommended to not feed them, because it’s novice for their diet, especially food with sugar.\nYou can also across some rest areas where you can barbecue in family or with friends.</string>
    <string name="resto_name1">Le ciné</string>
    <string name="resto_type1">Dine-in</string>
    <string name="resto_visiting_time1">8:00Am to 10:00Pm</string>
    <string name="resto_location1">Rue Amara Youcef, Blida</string>
    <string name="resto_des1">Le Ciné your Café-restaurant in Blida ...\nLunch - Coffee - Desserts - Pastry - Cocktail on the terrace ...\n In the heart of the rue de la Gare district, on the top floor of the famous cinema hall at least once a century old \"Le PARIS\", now transformed into the shopping mall with the same name, the café-restaurant \"Le Ciné\" offers a space privileged, conducive to relaxation, ideal for a lunch or a simple cocktail on the terrace.\n Gourmets can enjoy light and inventive cuisine in this café-restaurant, but above all, refined pastry with a touch of inventiveness.\nvisitors looking for a moment of relaxation enjoy a cocktail to the sounds of lounge rhythms, and discover a breathtaking view of the rue de Gare and the heights of Blida ... Come and discover our café-restaurant in Blida.</string>
    <string name="resto_name2">Chicken Burger</string>
    <string name="resto_type2">Dine-in . Takeaway . Delivery</string>
    <string name="resto_visiting_time2">10:30Am to 11:00Pm</string>
    <string name="resto_location2">09000</string>
    <string name="resto_des2">a warmnplaceand nice people the service is competent and the dishes are beautifully good especially the dish chawarma arabi</string>
    <string name="resto_name3">L\'Artisto</string>
    <string name="resto_type3">Dine . Takeaway</string>
    <string name="resto_visiting_time3">11:00Am to 11:30Pm</string>
    <string name="resto_location3">Blida</string>
    <string name="resto_des3">Nice place, warm reception, reasonable prices, with a nice and quiet view</string>
    <string name="resto_name4">Venezia gelato</string>
    <string name="resto_type4">Dine-in . Takeaway</string>
    <string name="resto_visiting_time4">10:00Am to 11:00Pm</string>
    <string name="resto_location4">Blida</string>
    <string name="resto_des4">Delecious ice cream, nice calm music,the place open spirit and appetite, good service but definitely worth it.</string>


</resources>