<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop"
        android:src="@drawable/welcome_screen_backgroud" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <TextView
            android:id="@+id/welcome_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_txt"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <LinearLayout
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/welcome_text"
            android:layout_centerHorizontal="true"
            android:background="@drawable/button"
            android:backgroundTint="#30000000"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/login_page_txt"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

        <EditText
            android:id="@+id/email_input"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/text"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:hint="@string/enter_email"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_below="@id/email_input"
            android:layout_centerHorizontal="true"
            android:hint="@string/enter_password"
            android:textColor="@color/black"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:id="@+id/buttons_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_input"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:orientation="horizontal"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/guest_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:background="@drawable/button"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:orientation="horizontal"
                android:padding="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_as_guest"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/forgot_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_layout"
            android:layout_alignLeft="@id/buttons_layout"
            android:text="@string/forgot_password"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/buttons_layout"
            android:layout_alignRight="@id/buttons_layout"
            android:text="@string/register"
            android:textColor="@color/white" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:text="@string/note"
        android:textColor="@color/white" />

</RelativeLayout>